--- a/panel.html
+++ b/panel.html
@@ -16,9 +16,13 @@
             display: flex;
             justify-content: between;
             align-items: center;
-            margin-bottom: 16px;
-            padding-bottom: 16px;
+            margin-bottom: 8px;
+            padding-bottom: 8px;
             border-bottom: 1px solid #ddd;
+        }
+
+        .header h2 {
+            margin: 0;
         }
         
         .controls {
@@ -225,7 +229,7 @@
 </head>
 <body>
     <div class="header">
-        <h2>GTM DataLayer Inspector</h2>
+        <h2>GTM Inspector</h2>
     </div>
     
     <div class="status" id="status">Waiting for dataLayer...</div>
