--- a/panel.html
+++ b/panel.html
@@ -31,6 +31,6 @@
         </div>
     </div>
 
-    <script src="panel.js"></script>
+    <script type="module" src="panel.js"></script>
 </body>
 </html>
