--- a/panel.html
+++ b/panel.html
@@ -15,7 +15,7 @@
     <div class="controls">
         <button id="refreshBtn">Refresh</button>
         <button id="clearBtn">Clear</button>
-        <button id="copyAllBtn">Copy All</button>
+        <!-- <button id="copyAllBtn">Copy All</button> -->
         
         <div class="filter-section">
             <label for="eventFilter">Filter by Event:</label>
